--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ let trialStartTime=null;
 const visuals=[];
 let completedTrials=0;
 let animalIndex = 0; // add near the top of your script
+let currentAnimalAudio = null;
 
 // ---- WebAudio booster (gesture-safe) ---------------------------------
 const AudioEngine = (() => {
@@ -163,10 +164,10 @@ const AudioEngine = (() => {
   const sources = new Map();        // el -> { src, gain, group }
   const pending = new Set();        // elements seen before ctx starts
   const groups = {
-    narration: 0.8,  // voice MP3s
-    sfx:       0.8,  // correct/wrong/animals
-    video:     9.5,  // quiet MP4s
-    music:     1.3   // #myAudio trials
+    narration: 0.7,  // voice MP3s
+    sfx:       0.7,  // correct/wrong/animals
+    video:     10.0,  // quiet MP4s
+    music:     2.0   // #myAudio trials
   };
 
   function groupFor(el) {
@@ -563,11 +564,30 @@ function runPitchDemo() {
         Now, the magical elevator is going to change how high or low the music sounds.<br>
         Ready? Listen to this song and see how the music gets higher when Melody rides the elevator up to the 2nd floor.
       </p>
-      <button id="playHighDemo" class="btn-primary" style="margin-top:20px;">Play</button>
+      <button id="playHighDemo" class="btn-primary" style="margin-top:20px; display:none;">Play</button>
+      <audio id="pitchIntroNarration" src="PT_PITCH_INTRO.mp3" preload="auto"></audio>
     </div>
   `);
 
-  document.getElementById("playHighDemo").addEventListener("click", playHighDemo);
+  const narrEl = document.getElementById("pitchIntroNarration");
+  const playBtn = document.getElementById("playHighDemo");
+
+  // Ensure AudioEngine wires the narration
+  AudioEngine.attach(narrEl);
+
+  // Play narration automatically if possible, then show Play button
+  narrEl.play()
+    .then(() => {
+      narrEl.onended = () => { playBtn.style.display = "inline-block"; };
+    })
+    .catch(() => {
+      // Autoplay blocked — just show the Play button immediately
+      playBtn.style.display = "inline-block";
+    });
+
+  playBtn.addEventListener("click", playHighDemo);
+}
+
 
   function playHighDemo() {
     updateScreen(`
@@ -581,19 +601,36 @@ function runPitchDemo() {
     video.onended = showLowText;
   }
 
-  function showLowText() {
-    updateScreen(`
-      <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
-        <p style="font-size:1.5em;line-height:1.6;max-width:800px;text-align:center;">
-          That was super high!<br><br>
-          Let’s try another, but this time, the notes will go lower.
-        </p>
-        <button id="playLowDemo" class="btn-primary" style="margin-top:20px;">Play</button>
-      </div>
-    `);
-    document.getElementById("playLowDemo").addEventListener("click", playLowDemo);
-  }
+function showLowText() {
+  updateScreen(`
+    <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
+      <p style="font-size:1.5em;line-height:1.6;max-width:800px;text-align:center;">
+        That was super high!<br><br>
+        Let’s try another, but this time, the notes will go lower.
+      </p>
+      <button id="playLowDemo" class="btn-primary" style="margin-top:20px; display:none;">Play</button>
+      <audio id="lowIntroNarration" src="PT_LOW1_INTRO.mp3" preload="auto"></audio>
+    </div>
+  `);
 
+  const narrEl = document.getElementById("lowIntroNarration");
+  const playBtn = document.getElementById("playLowDemo");
+
+  // Wire the narration audio into AudioEngine
+  AudioEngine.attach(narrEl);
+
+  narrEl.play()
+    .then(() => {
+      narrEl.onended = () => { playBtn.style.display = "inline-block"; };
+    })
+    .catch(() => {
+      // If autoplay is blocked, just show the Play button immediately
+      playBtn.style.display = "inline-block";
+    });
+
+  playBtn.addEventListener("click", playLowDemo);
+}
+  
   function playLowDemo() {
     updateScreen(`
       <video id="lowDemo" width="100%" height="100%" playsinline style="background:white;">
@@ -714,7 +751,7 @@ Then, choose which elevator I rode: the normal one, or the magical one!<br>
  Are you ready?<br>
  Let’s go!
         </p>
-        <audio id="pitchInstructions" src="PT_PITCH_INSTRUCTIONS.mp3"></audio>
+        <audio id="pitchInstructions" src="PITCH_INSTRUCTIONS.mp3"></audio>
       </div>
     `);
 
@@ -1051,23 +1088,39 @@ function updateProgress() {
 function showAnimalScreen(callback) {
   const animal = ANIMALS[animalIndex % ANIMALS.length];
   animalIndex++;
+
   updateScreen(`
     <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;background:white;padding:20px;">
       <img src="${animal.image}" alt="${animal.name}" style="max-width:40%;height:auto;margin-bottom:20px;"/>
       <h2>Ding! We stopped at the ${animal.name}'s floor!</h2>
       <p style="margin-top:10px;font-size:1.2em;">${animal.action} Then click Continue to ride again.</p>
-      <button id="continueAnimal" class="btn-primary" style="margin-top:20px;">Continue</button>
+      <button id="continueAnimal" class="btn-primary" style="margin-top:20px;" type="button">Continue</button>
     </div>
   `);
-  if (animal.audio) {
+
+  // Play the animal sound (don’t await)
+  currentAnimalAudio = animal.audio ?? null;
+  if (currentAnimalAudio) {
     try {
-      animal.audio.currentTime = 0;
-      animal.audio.play();
-    } catch (err) {
-      console.warn("Animal sound failed to play:", err);
-    }
+      currentAnimalAudio.currentTime = 0;
+      currentAnimalAudio.play().catch(() => {});
+    } catch (_) {}
   }
-  document.getElementById("continueAnimal").addEventListener("click", callback);
+
+  const btn = document.getElementById("continueAnimal");
+  btn.addEventListener("click", () => {
+    // Stop any ongoing animal audio immediately
+    if (currentAnimalAudio) {
+      try {
+        currentAnimalAudio.pause();
+        currentAnimalAudio.currentTime = 0;
+      } catch (_) {}
+      currentAnimalAudio = null;
+    }
+    // Debounce extra taps and proceed right away
+    btn.disabled = true;
+    callback();
+  }, { once: true });
 }
   
 function showParty() {
@@ -1091,6 +1144,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
