--- a/index.html
+++ b/index.html
@@ -1122,16 +1122,159 @@ function showAnimalScreen(callback) {
   }, { once: true });
 }
   
-function showParty() {
+// call like: showParty({ onDone: () => nextScreen() })
+function showParty({ onDone } = {}) {
+  // ---- quick CSS (animations + grid) ----
+  const css = `
+  #party-wrap {height:100%;display:flex;flex-direction:column;align-items:center;justify-content:center;background:#fff;gap:18px;padding:20px; position:relative; overflow:hidden;}
+  #animal-grid {display:grid;grid-template-columns:repeat(auto-fit,minmax(110px,1fr));gap:16px;max-width:900px;width:100%;}
+  .animal {display:flex;flex-direction:column;align-items:center;gap:6px}
+  .animal img {width:110px;height:auto;filter: drop-shadow(0 2px 6px rgba(0,0,0,.15));}
+  .label {font-size:14px;color:#333}
+  .dance1 {animation: bob 1.8s ease-in-out infinite;}
+  .dance2 {animation: wobble 1.6s ease-in-out infinite;}
+  .dance3 {animation: hop 1.2s ease-in-out infinite;}
+  @keyframes bob {0%,100%{transform:translateY(0)}50%{transform:translateY(-8px)}}
+  @keyframes wobble {0%,100%{transform:rotate(0)}50%{transform:rotate(-6deg)}}
+  @keyframes hop {0%,100%{transform:translateY(0)}35%{transform:translateY(-10px)}}
+  #party-cta {display:flex; gap:10px; flex-wrap:wrap; justify-content:center}
+  .btn {padding:10px 14px;border:none;border-radius:999px;background:#4b2e83;color:#fff;font-weight:600;cursor:pointer;box-shadow:0 2px 8px rgba(0,0,0,.12);}
+  .btn:disabled{opacity:.6;cursor:not-allowed}
+  #confetti {position:absolute; inset:0; pointer-events:none}
+  `;
+  injectStyleOnce("party-css", css);
+
+  // ---- screen ----
   updateScreen(`
-    <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;background:white;padding:20px;">
-      <div style="display:flex;flex-wrap:wrap;justify-content:center;gap:20px;margin-bottom:20px;">
-        ${ANIMALS.map(a => `<img src="${a.image}" alt="${a.name}" style="width:120px;height:auto;"/>`).join('')}
+    <div id="party-wrap">
+      <canvas id="confetti"></canvas>
+      <h1 style="color:#4b2e83;margin:0;">Great job! It’s party time! 🎉</h1>
+      <div id="animal-grid">
+        ${ANIMALS.map((a,i)=>`
+          <div class="animal ${['dance1','dance2','dance3'][i%3]}">
+            <img src="${a.image}" alt="${a.name}">
+            <div class="label">${a.name}</div>
+          </div>
+        `).join('')}
       </div>
-      <h1 style="color:#4b2e83;">Great job! It's party time!</h1>
+      <div id="party-cta">
+        <button id="startParty" class="btn">Start the party 🎈</button>
+        <button id="replayParty" class="btn" disabled>Replay</button>
+        ${onDone ? `<button id="continueBtn" class="btn">Continue ▶</button>` : ``}
+      </div>
+      <div style="font-size:13px;color:#666">Tip: turn sound on for music + narration</div>
     </div>
   `);
+
+  // ---- audio (gated by a click) ----
+  const musicGain = (window.groups?.music ?? 1.0);
+  const sfxGain   = (window.groups?.sfx   ?? 1.0);
+  const narrationGain = (window.groups?.narration ?? 1.0);
+
+  const bgm = new Audio('party_music_loop.mp3'); // short, upbeat loop (8–15s)
+  bgm.loop = true; bgm.volume = 0.6 * musicGain;
+
+  const cheer = new Audio('kids_cheer.mp3');
+  cheer.volume = 0.9 * sfxGain;
+
+  const outro = new Audio('PARTY_OUTRO.mp3'); // “You did it! Thanks for playing…”
+  outro.volume = 0.95 * narrationGain;
+
+  const startBtn = document.getElementById('startParty');
+  const replayBtn = document.getElementById('replayParty');
+  const contBtn = document.getElementById('continueBtn');
+
+  startBtn.addEventListener('click', async () => {
+    startBtn.disabled = true;
+    replayBtn.disabled = true;
+
+    // small sequence: cheer ➜ confetti burst ➜ bgm + narration
+    burstConfetti(600); // 600 ms burst
+    try { cheer.currentTime = 0; await cheer.play(); } catch {}
+    setTimeout(async () => {
+      try { bgm.currentTime = 0; await bgm.play(); } catch {}
+      try { outro.currentTime = 0; await outro.play(); } catch {}
+      replayBtn.disabled = false;
+    }, 200);
+  });
+
+  replayBtn.addEventListener('click', () => {
+    burstConfetti(600);
+    try { cheer.currentTime = 0; cheer.play(); } catch {}
+    try { outro.currentTime = 0; outro.play(); } catch {}
+  });
+
+  contBtn?.addEventListener('click', () => {
+    try { bgm.pause(); } catch {}
+    onDone?.();
+  });
+
+  // pause music if user leaves this screen
+  addScreenCleanup(() => { try { bgm.pause(); } catch {} });
+
+  // ---- simple confetti (emoji rain on canvas) ----
+  startConfettiLoop();
+
+  function injectStyleOnce(id, cssText){
+    if (!document.getElementById(id)) {
+      const s = document.createElement('style'); s.id=id; s.textContent=cssText; document.head.appendChild(s);
+    }
+  }
+
+  function burstConfetti(durationMs=800){
+    const t0 = performance.now();
+    const bursts = [];
+    for (let i=0;i<40;i++){
+      bursts.push({
+        x: Math.random(), y: -0.1, vy: 0.004 + Math.random()*0.006,
+        vx: (Math.random()-.5)*0.003, rot: Math.random()*Math.PI*2, vr: (Math.random()-.5)*0.2,
+        txt: ["🎉","✨","🎈","💫","⭐","🎊"][Math.floor(Math.random()*6)], life: durationMs
+      });
+    }
+    transientSprites.push(...bursts);
+    setTimeout(()=>{ // remove after life
+      transientSprites.splice(0, bursts.length);
+    }, durationMs);
+  }
+
+  // confetti engine (very lightweight)
+  const canvas = document.getElementById('confetti');
+  const ctx = canvas.getContext('2d');
+  const sprites = [];         // continuous sprinkle
+  const transientSprites = []; // bursts
+
+  function startConfettiLoop(){
+    const resize = () => { canvas.width = canvas.clientWidth; canvas.height = canvas.clientHeight; };
+    resize(); new ResizeObserver(resize).observe(canvas);
+
+    // make gentle stream
+    for (let i=0;i<50;i++){
+      sprites.push({
+        x: Math.random(), y: Math.random(), vy: 0.001 + Math.random()*0.002,
+        vx: (Math.random()-.5)*0.0015, rot: Math.random()*Math.PI*2, vr: (Math.random()-.5)*0.05,
+        txt: ["🎉","✨","🎈","💫","⭐","🎊"][Math.floor(Math.random()*6)]
+      });
+    }
+
+    function tick(){
+      ctx.clearRect(0,0,canvas.width,canvas.height);
+      const all = sprites.concat(transientSprites);
+      for (const p of all){
+        p.x += p.vx; p.y += p.vy; p.rot += p.vr;
+        if (p.y > 1.1) { p.y = -0.1; p.x = Math.random(); }
+        const px = p.x * canvas.width, py = p.y * canvas.height;
+        ctx.save(); ctx.translate(px, py); ctx.rotate(p.rot);
+        ctx.font = `${Math.max(14, canvas.width*0.02)}px system-ui, emoji`;
+        ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
+        ctx.fillText(p.txt, 0, 0);
+        ctx.restore();
+      }
+      requestAnimationFrame(tick);
+    }
+    tick();
+  }
 }
+  
 function rebuildBaseHTML() {
   updateScreen("");
   document.getElementById("trialControls").innerHTML="";
@@ -1143,6 +1286,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
