--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ function showTempoResponseScreen(correctAnswer, callback) {
   setTimeout(() => {
     // Replay the same trial video
     playTempoPracticeVideo(`${correctAnswer === "fast" ? "PT_FAST2.mp4" : "PT_SLOW2.mp4"}`, correctAnswer, callback);
-  }, 1500);
+  }, 4000);
 }
 
     });
@@ -734,7 +734,7 @@ function showPitchResponseScreen(correctAnswer, callback) {
   setTimeout(() => {
     // Replay the same trial video
     playPitchPracticeVideo(`${correctAnswer === "high" ? "PT_HIGH2.mp4" : "PT_LOW2.mp4"}`, correctAnswer, callback);
-  }, 1500);
+  }, 4000);
 }
 
     });
@@ -789,7 +789,7 @@ function showRealTrialsIntro() {
 you won’t hear the song anymore even though it will keep playing in the elevator for me. Keep singing the song in your head <br>
 so that when the elevator gets to the next floor and the doors open up, you can tell me if I was in the normal elevator or the magical one. <br>
 If the music stayed the same, that was a normal elevator. <br>
-But if the speed of the music changed, then Melody must have ridden the magical elevator! <br>
+But if the speed of the music changed, then I must have ridden the magical elevator! <br>
 So listen carefully, and keep the music playing in your head. <br>
 Then, choose which elevator I rode: the normal one, or the magical one! <br><br>
  Are you ready? <br>
@@ -1290,6 +1290,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
