--- a/index.html
+++ b/index.html
@@ -540,21 +540,38 @@ function showTempoResponseScreen(correctAnswer, callback) {
       const choice = btn.getAttribute('data-choice');
       buttons.forEach(b => b.disabled = true);
 
+// Save practice trial response to Backendless
+      const entry = {
+        participant_id: participantID,
+        session_id: sessionID,
+        trial_type: "practice",
+        trial_num: `pt ${i}`,
+        video: practiceTrials[i-1].video,
+        choice,
+        correct_answer: correctAnswer,
+        is_correct: choice === correctAnswer,
+        timestamp: new Date().toISOString()
+      };
+      fetch("https://api.backendless.com/04D99C8B-3B22-454C-889B-5E66A5798C47/38037288-90E3-4F8A-87D6-E052FCD03D67/data/responses", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(entry)
+      });
+
       if (choice === correctAnswer) {
         document.getElementById("feedback").style.color = "green";
         document.getElementById("feedback").innerText = "Correct!";
         document.getElementById("correctSound").play().catch(() => {});
         setTimeout(callback, 1500);
 } else {
-  document.getElementById("feedback").style.color = "red";
-  document.getElementById("feedback").innerText = "Oops! Let's try that one again.";
-  document.getElementById("wrongSound").play().catch(() => {});
-
-  setTimeout(() => {
-    // Replay the same trial video
-    playTempoPracticeVideo(`${correctAnswer === "fast" ? "PT_FAST2.mp4" : "PT_SLOW2.mp4"}`, correctAnswer, callback);
-  }, 5000);
-}
+        document.getElementById("feedback").style.color = "red";
+        document.getElementById("feedback").innerText = "Oops! Let's try that one again.";
+        document.getElementById("wrongSound").play().catch(() => {});
+        setTimeout(() => {
+          // Replay the same trial video
+          playTempoPracticeVideo(`${correctAnswer === "fast" ? "PT_FAST2.mp4" : "PT_SLOW2.mp4"}`, correctAnswer, callback);
+        }, 4500);
+      }
 
     });
   });
@@ -1292,6 +1309,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
