--- a/index.html
+++ b/index.html
@@ -527,18 +527,18 @@ function showTempoResponseScreen(choice, correctAnswer) {
   const entry = {
     participant: participantID,
     session: sessionID,
-    block: "tempo_practice",        // label clearly as practice
-    trial_num: trialCounter,
+    block: "tempo_practice",
+    trial_num: `pt ${trialCounter}`,
     timestamp: new Date().toISOString(),
     choice,
-    audio: "practice_video",        // or the actual video filename if you want
+    audio: "practice_video",
     correct_answer: correctAnswer,
     reaction_time_sec: parseFloat(reactionTimeSec.toFixed(3)),
-    practice: true                  // extra flag so you can filter later
+    practice: true
   };
 
-  // send to Backendless
-  fetch("https://api.backendless.com/YOUR-APP-ID/YOUR-REST-API-KEY/data/responses", {
+  // send to Backendless (real trial table)
+  fetch("https://api.backendless.com/04D99C8B-3B22-454C-889B-5E66A5798C47/38037288-90E3-4F8A-87D6-E052FCD03D67/data/responses", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify(entry)
@@ -1289,6 +1289,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
