--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@ function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
   `);
 
   const video = document.getElementById("practiceVideo");
-video.muted = false;
-  video.volume = 1.0;
+  video.muted = false;
+    video.volume = 1.0;
   video.onended = () => {
     showTempoResponseScreen(correctAnswer, callback);
   };
@@ -515,14 +515,50 @@ video.muted = false;
 }
 
 function showTempoResponseScreen(choice, correctAnswer) {
-  if (responseSubmitted) return;
-  responseSubmitted = true;
+  updateScreen(`
+<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;
+    background: white;
+    padding: 20px;">
+      <h1 style="color: #4b2e83; margin-top: 30px;">How did the music sound?</h1>
+      <div style="display: flex; gap: 40px; margin-top: 20px;">
+        <button class="tempo-btn" data-choice="fast" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Fast</button>
+        <button class="tempo-btn" data-choice="slow" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Slow</button>
+        <button class="tempo-btn" data-choice="same" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Same</button>
+      </div>
+      <audio id="correctSound" src="correct_feedback.mp3"></audio>
+      <audio id="wrongSound" src="wrong_feedback.mp3"></audio>
+      <div id="feedback" style="margin-top: 20px; font-size: 1.2em; color: red;"></div>
+    </div>
+  `);
 
-  // disable further clicks
-  const imgs = document.querySelectorAll('.tempo-option');
-  imgs.forEach(img => img.style.pointerEvents = 'none');
+  const buttons = document.querySelectorAll('.tempo-btn');
+  let answered = false;
 
-  // ...existing code...
+  buttons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      if (answered) return;
+      answered = true;
+      const choice = btn.getAttribute('data-choice');
+      buttons.forEach(b => b.disabled = true);
+
+      if (choice === correctAnswer) {
+        document.getElementById("feedback").style.color = "green";
+        document.getElementById("feedback").innerText = "Correct!";
+        document.getElementById("correctSound").play().catch(() => {});
+        setTimeout(callback, 1500);
+} else {
+  document.getElementById("feedback").style.color = "red";
+  document.getElementById("feedback").innerText = "Oops! Let's try that one again.";
+  document.getElementById("wrongSound").play().catch(() => {});
+
+  setTimeout(() => {
+    // Replay the same trial video
+    playTempoPracticeVideo(`${correctAnswer === "fast" ? "PT_FAST2.mp4" : "PT_SLOW2.mp4"}`, correctAnswer, callback);
+  }, 4000);
+}
+
+    });
+  });
 }
 
 function runPitchDemo() {
